[B]3.2.7[/B]
- Fixed some episode plots still not get scraped

[B]3.2.6[/B]
- Fixed episode title and plot

[B]3.2.5[/B]
- Fixed show title and plot

[B]3.2.4[/B]
- Fixed: search results following yet another change in tvdb API response

[B]3.2.3[/B]
- Fixed: search results following v3.2.2

[B]3.2.2[/B]
- Fixed: Another patch in order to fix TVDB inconsistency (trying to find series without overview)

[B]3.2.1[/B]
- Fixed: artwork preview (Scudlee rocks! Thank you!)

[B]3.2.0[/B]
- Fixes after thetvdb changes

[B]3.0.16[/B]
- Fix crash for empty artwork

[B]3.0.15[/B]
- Changed: use new language directory structure
- Added: website in addon.xml
- Added: assets tag in addon.xml

[B]3.0.14[/B]
- Fixed: Ratings for episodes not getting scraped

[B]3.0.13[/B]
- Added: Support slug URLs in nfo files

[B]3.0.12[/B]
- Fixed: DVD and Absolute episode ordering fixes

[B]3.0.11[/B]
- Fixed: Use first aired episode date when firstAired field is missing (thx to Smeulf)

[B]3.0.10[/B]
- Fixed: Use the year in the title as fallback when no firstAired field, to reduce mismatches

[B]3.0.9[/B]
- Fixed: Character encoding fixes (part 2)

[B]3.0.8[/B]
- Fixed: Character encoding fixes

[B]3.0.7[/B]
- Fixed: Episode list changes

[B]3.0.6[/B]
- Fixed: artwork won't be scraped (again)
- Fixed: Episode director/guest star mix-ups

[B]3.0.5[/B]
- fixed: fanart preview

[B]3.0.4[/B]
- fixed: artwork won't be scraped

[B]3.0.3[/B]
- fixed: Spaces fix 2

[B]3.0.2[/B]
- fixed: Spaces removed from json regexes

[B]3.0.1[/B]
- fixed: Uniqueids fixes

[B]3.0.0[/B]
- Changed: Multiple ratings and uniqueids

[B]2.0.5[/B]
- Fixed: Prevent language choices from interfering with IMDb ratings

[B]2.0.4[/B]
- Fixed: Moved IMDb ratings to prevent clearing buffers before GetActors

[B]2.0.3[/B]
- Fixed: IMDb series ratings
- Changed: Added the www back to the artwork URLs
- Changed: Turn fallback language on by default

[B]2.0.2[/B]
- Fixed: Special episode placement